# springstreet

./: README.md
backend/: .env.example  README.md  app.py  config.py  db.py  etl.py  etl_price_history.py  etl_script_output.md  etl_securities.py  factsheet_performance.md  factsheet_service.py  logger.py  main.py  models.py  performance_service.py  pyproject.toml  router.py  yf_service.py
backend/alembic/: env.py
backend/alembic/versions/: 20260603_01_create_securities_and_price_history.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/pages/: FactsheetPage.tsx  ProductListPage.tsx
