[project]
name = "backend"
version = "0.1.0"
description = "Simple FastAPI backend scaffold"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic-settings",
  "sqlalchemy",
  "alembic",
  "psycopg[binary]",
  "yfinance",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
